# UAO-Neumonia

./: .dockerignore  .gitignore  Dockerfile  README.md  detector_neumonia.py  docker-compose.yml  grad_cam.py  historial.csv  integrator.py  load_model.py  main.py  preprocess_img.py  pyproject.toml  requirements.docker.txt  requirements.txt
docker/: start_gui.sh
src/neumonia_app/: __init__.py  grad_cam.py  integrator.py  load_model.py  main.py  preprocess_img.py  read_img.py  ui.py
src/neumonia_app/gui/: app.py  data_client_services.py  image_utils.py  launcher.py  services.py  state.py  theme.py
src/neumonia_app/inference/: predict.py
src/neumonia_app/model_io/: keras_inputs.py
test/: __init__.py  test_predict_basic.py  test_preprocess_img.py  test_read_img.py
