[project]
name = "uao-neumonia"
version = "0.1.0"
description = "GUI Tkinter para clasificación de neumonía con Grad-CAM y reportes (CSV/PDF)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "UAO-Neumonia Team" }
]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "opencv-python>=4.8",
  "pydicom>=2.4",
  "reportlab>=4.0",
  "tensorflow>=2.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6",
  "isort>=5.13",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["E", "F", "I", "UP", "D"]
ignore = ["D203", "D212"]
exclude = [".venv", "build", "dist", ".mypy_cache", ".pytest_cache"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "test"]
known_first_party = ["neumonia_app"]
